--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_file_path"
-            android:text="/storage/emulated/0/Download/small.txt"
+            android:text="/storage/emulated/0/Download/big.txt"
             android:inputType="textUri"/>
     </android.support.design.widget.TextInputLayout>
 
@@ -42,6 +42,14 @@
         android:layout_margin="@dimen/margin_medium"
         android:visibility="gone"
         android:layout_width="match_parent"/>
+
+    <ProgressBar
+        android:id="@+id/progress"
+        style="?android:progressBarStyleSmall"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="@dimen/margin_medium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
